objects/ASI_MFM_Sub_brand_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>ASI MFM Sub-brand Allocations</relationshipLabel>
        <relationshipName>ASI_MFM_Sub_brand_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>ASI MFM Sub-brand Allocations</relationshipLabel>
        <relationshipName>ASI_MFM_Sub_brand_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_percentage__c</fullName>
        <label>Sub-brand Percentage</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Percentage__c</fullName>
        <label>Total Percentage</label>
        <summarizedField>ASI_MFM_Sub_brand_Allocation_Detail__c.ASI_MFM_Percentage__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Sub_brand_Allocation_Detail__c.ASI_MFM_Sub_brand_Allocation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>ASI MFM Sub-brand Allocation</label>
    <listViews>
        <fullName>All_Gulf_Brand_Allocation</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Total_Percentage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand_Allocation__c.ASI_MFM_Gulf_Brand_Allocation</value>
        </filters>
        <label>All Gulf Brand Allocation</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Sub-brand Allocation Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI MFM Sub-brand Allocations</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Sub_Brand_Allocation</fullName>
        <active>true</active>
        <label>ASI MFM CN Sub-Brand Allocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_Gulf_Brand_Allocation</fullName>
        <active>true</active>
        <label>ASI MFM Gulf Brand Allocation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>